stg/namespase.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: flux-stg
  labels: 
    name: app
